feat: embed GA4 snippet across dynamic and static layouts

--- a/static_site/vuex-computed-getters.html
+++ b/static_site/vuex-computed-getters.html
@@ -4,7 +4,17 @@
     <title>Vuex 中的 Computed 用法 - Getters - Bucky Chu | Railquill</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WTW6H7J1FD"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-WTW6H7J1FD');
+    </script>
+
     <!-- SEO: Allow search engine indexing -->
     <meta name="robots" content="index, follow">
     
